Scene Editor: fix vertical spacing between panels

--- a/scene_editor/src/styles.css
+++ b/scene_editor/src/styles.css
@@ -52,11 +52,12 @@ body {
 
 .sidebar-panel {
     margin: 5px;
-    margin-top: 0px;
+    margin-top: 2px;
 }
 
 .sidebar-panel h5 {
     color: white;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 
